--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-tradingview-widget": "^1.3.2",
     "sass": "^1.41.1",
     "web-vitals": "^2.1.0",
     "web3modal": "^1.9.4"
